--- a/HTML/Pasteleria/CSS/main.css
+++ b/HTML/Pasteleria/CSS/main.css
@@ -25,24 +25,38 @@ body{
     padding: 0%;
     margin: 0%;
 }
-#welcome{
-    text-align: center;
-    font-family: 'Lobster', cursive;
-}
 .nav-bar{
     background-color: rgba(255, 255, 255, .8);;
 }
 .nav-bar a{
     color: #553811;
+    font-family: 'Lobster', cursive;
+    font-size: 1.5em;
     text-decoration: none;
 }
 .nav-bar a:hover{
     color: sienna;
     text-decoration: dashed;
 }
-.layer{
+/* .layer {
     height: 600px;
     width: 100%;
+} */
+.container{
+    position: relative;
+    display: inline-block;
+    width: 100vw;
+}
+.slogan{
+    display: inline-block;
+    font-family: 'Lobster', cursive;
+    font-size:2em;
+    color: #FFFFFF;
+    background-color: rgba(0, 0, 0, .5);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .logo a img{
     max-width: 80px;
@@ -53,7 +67,7 @@ body{
     margin: 2em;
 }
 #menu div{
-    background-color: rgba(255, 255, 255, .7);
+    background-color: rgba(255, 255, 255, .8);
     list-style: none;
     padding: 2em;
 }
@@ -61,7 +75,7 @@ body{
     list-style: none;
 }
 .formulario{
-    background-color: rgba(255, 255, 255, .6);
+    background-color: rgba(255, 255, 255, .8);
     text-align: justify;
     color: #000000;
     padding: 2em;
