--- a/Pasteleria/CSS/dash.css
+++ b/Pasteleria/CSS/dash.css
@@ -1,3 +1,19 @@
+:root{
+    --black-shadow: rgba(0, 0, 0, 0.1);
+    --black-strong-shadow: rgba(0, 0, 0, 0.25);
+    --white-shadow: rgba(255, 255, 255, 0.1);
+    --white-strong-shadow: rgba(255, 255, 255, 0.25);
+    --white: #FFF;
+    --dark-gray: #333;
+    --dark-silver: #727272;
+    --primary-blue: #007bff;
+    --spanish-pink: #f9b9b7;
+    --cliclamen: #f06c9b;
+    --deep-champagne: #f5d491;
+    --dark-skyblue: #96c9dc;
+    --candel-blue: #61a0af;
+}
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -31,10 +47,8 @@ body {
     bottom: 0;
     left: 0;
     z-index: 100;
-    /* Behind the navbar */
     padding: 48px 0 0;
-    /* Height of navbar */
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+    box-shadow: inset -1px 0 0 var(--black-shadow);
 }
 
 @media (max-width: 767.98px) {
@@ -55,16 +69,16 @@ body {
 
 .sidebar .nav-link {
     font-weight: 500;
-    color: #333;
+    color: var(--dark-gray);
 }
 
 .sidebar .nav-link .feather {
     margin-right: 4px;
-    color: #727272;
+    color: var(--dark-silver);
 }
 
 .sidebar .nav-link.active {
-    color: #007bff;
+    color: var(--primary-blue);
 }
 
 .sidebar .nav-link:hover .feather,
@@ -82,8 +96,8 @@ body {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     font-size: 1rem;
-    background-color: rgba(0, 0, 0, 0.25);
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
+    background-color: var(--black-strong-shadow);
+    box-shadow: inset -1px 0 0 var(--black-strong-shadow);
 }
 
 .navbar .navbar-toggler {
@@ -98,12 +112,12 @@ body {
 }
 
 .form-control-dark {
-    color: #fff;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-color: rgba(255, 255, 255, 0.1);
+    color: var(--white);
+    background-color: var(--white-shadow);
+    border-color: var(--white-shadow);
 }
 
 .form-control-dark:focus {
     border-color: transparent;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0 0 3px var(--white-strong-shadow);
 }
