--- a/Vacunaciones/CSS/style.css
+++ b/Vacunaciones/CSS/style.css
@@ -87,7 +87,7 @@ select {
     max-width: 100vw;
     align-items: center;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 75fr);
 }
 .box1{
     position: relative;
@@ -119,8 +119,10 @@ select {
     grid-row: 3/3;
     justify-content: space-around;
 }
-.fa-shield-blank{
+.gold-icon{
     color: var(--gold);
+    background-color: var(--shadow-gold);
+    box-shadow:5px 5px 5px rgba(0, 0, 0, .2);
 }
 .land-img{
     display: flex;
@@ -177,4 +179,24 @@ select {
     border-radius: 5px;
     border: 0;
     box-shadow: 0px 5px 5px var(--shadow);
+}
+
+/* logos de las vacunas */
+.logos{
+    display: grid;
+    max-width: 100vw;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 100px;
+}
+.log-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    grid-column: 2/2;
+}
+.logo{
+    width: 300px;
+    height: 150px;
 }
