--- a/Vacunaciones/CSS/style.css
+++ b/Vacunaciones/CSS/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
 
 :root{
     --blue-medicine: #1688e3;
@@ -14,7 +14,9 @@
     --font-open: 'Open Sans', bold;
     --font-strong: rgba(109, 109, 109, 0.8);
     --gold: rgb(255, 215, 0);
-    --shadow-gold: rgba(255, 215,0, .3);
+    --bg-gold: rgba(255, 215,0, .2);
+    --shadow-gold: rgba(255, 215,0, .4);
+    --blue-shadow: rgba(31, 80, 163, .1);
 }
 *{
     margin: 0px;
@@ -26,12 +28,47 @@ body{
 }
 h1{
     color: var(--title);
+    font-size: 2.8rem;
+    font-weight: 600;
+}
+h2{
+    color: var(--title);
+    font-size: 2.3rem;
+    font-weight: 600;
+}
+p{
+    font-size: 1.1rem;
+    margin-top: 10px;
 }
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
+}
+.box{
+    position: relative;
+    background-color: var(--rombos);
+    width: 100px;
+    height: 100px;
+    transform: rotate(-45deg);
+}
+.container{
+    display: grid;
+    max-width: 100vw;
+    align-items: center;
+}
+.blueicon-sm{
+    border-radius: 5px;
+    padding: 6px;
+    color: var(--brand-color);
+    background-color: var(--blue-shadow);
+}
+.blueicon-md{
+    border-radius: 5px;
+    padding: 10px;
+    color: var(--brand-color);
+    background-color: var(--blue-shadow);
 }
 /* Barra de Navegación */
 .brand-name a{
@@ -47,7 +84,7 @@ select {
     background-color: var(--bg-nav);
     padding: 20px;
     position: fixed;
-    z-index: 3;
+    z-index: 5;
 }
 .brand-name{
     grid-column: 2/3;
@@ -76,12 +113,7 @@ select {
     box-shadow: 1px 5px 5px var(--shadow);
 }
 
-
 /* Seccion main */
-.info-content h1{
-    font-size: 3rem;
-    font-weight: 600;
-}
 .container-main{
     display: grid;
     max-width: 100vw;
@@ -90,21 +122,11 @@ select {
     grid-template-rows: repeat(4, 75fr);
 }
 .box1{
-    position: relative;
-    background-color: var(--rombos);
-    width: 100px;
-    height: 100px;
     top: -20px;
     left: 60px;
     z-index: 1;
-    transform: rotate(-45deg);
 }
 .box2{
-    position: relative;
-    background-color: var(--rombos);
-    width: 100px;
-    height: 100px;
-    transform: rotate(-45deg);
     top: 390px;
     left: 550px;
     z-index: 1;
@@ -120,9 +142,11 @@ select {
     justify-content: space-around;
 }
 .gold-icon{
+    padding: 4px;
     color: var(--gold);
-    background-color: var(--shadow-gold);
-    box-shadow:5px 5px 5px rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    background-color: var(--bg-gold);
+    /* box-shadow: 0 2px 2px 1px var(--shadow-gold); */
 }
 .land-img{
     display: flex;
@@ -138,6 +162,7 @@ select {
 }
 /* formulario de vacunacion */
 .title{
+    margin-top: -60px;
     grid-column: 2/6;
     grid-row: 3/5;
 }
@@ -199,4 +224,61 @@ select {
 .logo{
     width: 300px;
     height: 150px;
+}
+
+/* Beneficios de la vacunacion */
+.box-3{
+    position: absolute;
+    top: 930px;
+    right: 50px;
+    float: right;
+    z-index: 1;
+}
+.reasons{
+    margin: 20px 0px 20px 0px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+.reasons h2{
+    grid-column: 2/6;
+}
+.reasons p{
+    grid-column: 2/5;
+    grid-row: 2/2;
+}
+/* Tarjetas de beneficios */
+.cards{
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 1fr;
+}
+.center{
+    align-items: center;
+    justify-content: space-around;
+    display:flex;
+    grid-column: 2/8;
+    gap: 10px;
+}
+.card{
+    width: 250px;
+    height: 270px;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 20px 0px 20px 0px;
+    box-shadow: 0px 1px 0px 1px;
+}
+.card:hover{
+    box-shadow: 0px 5px 5px 5px var(--shadow);
+}
+.card h4{
+    margin: 10px 4px 5px 10px;
+    color: var(--title);
+    font-size: 1.2rem;
+}
+.card p{
+    margin: 0 10px 0 10px;
+    font-size: .9rem;
+    font-weight: 600;
+}
+.card span{
+    margin-left: 10px;
 }
