--- a/Vacunaciones/CSS/style.css
+++ b/Vacunaciones/CSS/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&display=swap');
 
 :root{
     --blue-medicine: #1688e3;
@@ -6,7 +6,8 @@
     --rombos: rgba(230, 230, 233, 0.7);
     --title: #1f50a3;
     --bg-button: #2b4bc9;
-    --font-color: #9da6b6;
+    --bg-button-light: rgba(109, 126, 196, 0.4);
+    --font-color: #525e72cb;
     --bg-icons: #f4f7ff;
     --bg-translucid: rgba(250, 252, 254, 0.1);
     --shadow: rgba(27, 58, 111, 0.3);
@@ -24,20 +25,27 @@
 }
 body{
     font-family: var(--font-open);
-    color: var(--font-color);;
+    color: var(--font-color);
 }
 h1{
     color: var(--title);
     font-size: 2.8rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 h2{
     color: var(--title);
     font-size: 2.3rem;
     font-weight: 600;
 }
+h4{
+    color: var(--title);
+    font-size: 1rem;
+    font-weight: 600;
+}
 p{
+    color: var(--font-strong);
     font-size: 1.1rem;
+    font-weight: 500;
     margin-top: 10px;
 }
 select {
@@ -49,8 +57,8 @@ select {
 .box{
     position: relative;
     background-color: var(--rombos);
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     transform: rotate(-45deg);
 }
 .container{
@@ -67,6 +75,12 @@ select {
 .blueicon-md{
     border-radius: 5px;
     padding: 10px;
+    color: var(--brand-color);
+    background-color: var(--blue-shadow);
+}
+.blueicon-lg{
+    border-radius: 5px;
+    padding: 15px;
     color: var(--brand-color);
     background-color: var(--blue-shadow);
 }
@@ -122,13 +136,13 @@ select {
     grid-template-rows: repeat(4, 75fr);
 }
 .box1{
-    top: -20px;
+    top: -30px;
     left: 60px;
     z-index: 1;
 }
 .box2{
     top: 390px;
-    left: 550px;
+    left: 500px;
     z-index: 1;
 }
 .info-content{
@@ -205,6 +219,21 @@ select {
     border: 0;
     box-shadow: 0px 5px 5px var(--shadow);
 }
+.btn-light{
+    background-color: var(--bg-button-light);
+    color: var(--bg-button);
+    width: 170px;
+    height: 40px;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 5px;
+    border: 0;
+}
+.btn-light:hover{
+    color: #FFF;
+    background-color: var(--bg-button);
+    box-shadow:0px 5px 5px var(--bg-button);
+}
 
 /* logos de las vacunas */
 .logos{
@@ -248,18 +277,18 @@ select {
 }
 /* Tarjetas de beneficios */
 .cards{
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
 }
 .center{
     align-items: center;
     justify-content: space-around;
     display:flex;
-    grid-column: 2/8;
+    grid-column: 2/12;
     gap: 10px;
 }
 .card{
-    width: 250px;
+    width: 200px;
     height: 270px;
     padding: 20px;
     border-radius: 5px;
@@ -281,4 +310,129 @@ select {
 }
 .card span{
     margin-left: 10px;
+}
+/* 3ra seccion con accordion */
+.grid-12{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.girl{
+    grid-column: 1/5;
+    grid-row: 1/6;
+    align-self: flex-end;
+    z-index: 2;
+}
+.blue-box{
+    position: absolute;
+    background-color: var(--brand-color);
+    top: 1858px;
+    height: 300px;
+    width: 450px;
+    z-index: -1;
+}
+.info{
+    grid-column: 6/12;
+    grid-row: 1/2;
+}
+.accordion{
+    grid-column: 6/12;
+    grid-row: 2/6;
+}
+.grid-2{
+    display: grid;
+}
+
+/* Area de contacto con los clientes */
+.emergency{
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    margin: 50px 0px 100px 0px;
+}
+.emergency h2{
+    grid-column: 2/6;
+}
+.emergency p{
+    grid-row: 2/3;
+    grid-column: 2/5;
+}
+.contacto{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 150px 150px;
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+    margin: 150px 0 50px 0;
+}
+.contact-box{
+    display: grid;
+    grid-template-columns: 60px 120px;
+    grid-template-rows: 25px 20px 70px;
+    align-items: center;
+    width: 180px;
+    height: 100px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 1px 5px 1px var(--shadow);
+}
+.contact-box span{
+    grid-row: 1/3;
+    align-content: center;
+    justify-self: center;
+}
+.contact-box h4{
+    align-items: flex-end;
+}
+.contact-box p{
+    font-size: .8rem;
+}
+.contact-box button{
+    grid-column: 1/3;
+    align-self: center;
+    justify-self: center;
+}
+.contact-box:hover{
+    box-shadow: 5px 5px 15px 5px var(--shadow)
+}
+.guy{
+    justify-content: right;
+    grid-column: 6/12;
+    grid-row: 1/3;
+}
+.call{
+    grid-column: 3/4;
+}
+.chat{
+    grid-column: 4/5;
+}
+.video-call{
+    grid-row: 2/3;
+    grid-column: 3/4;
+}
+.mail{
+    grid-row: 2/3;
+    grid-column: 4/5;
+}
+.box-4{
+    position: absolute;
+    right: 50px;
+}
+.guy img{
+    position: relative;
+    top: -85px;
+}
+.bg-img{
+    position: absolute;
+    top: 2612px;
+    left: 720px;
+    width: 590px;
+    height: 395px;
+    background: var(--blue-medicine);
+    z-index: -1;
 }
