--- a/Vacunaciones/CSS/style.css
+++ b/Vacunaciones/CSS/style.css
@@ -436,3 +436,58 @@ select {
     background: var(--blue-medicine);
     z-index: -1;
 }
+
+/* footer */
+.footer{
+    display: grid;
+    background-color: var(--blue-shadow);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 230px 70px;
+    align-items: center;
+}
+.foot-menu{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-column: 1/13;
+    color: var(--font-strong);
+}
+.foot-menu li{
+    position: relative;
+    list-style: none;
+    color: var(--font-strong);
+    padding: 10px;
+    font-weight: 600;
+    left: -10px;
+}
+.foot-menu a{
+    color: var(--font-strong);
+    text-decoration: none;
+}
+.slogan{
+    grid-column: 2/4;
+}
+.slogan h3{
+    color: var(--brand-color);
+}
+.about{
+    position: relative;
+    grid-column: 7/9;
+    left: 90px;
+}
+.company{
+    grid-column: 9/11;
+}
+.support{
+    position: relative;
+    left: -70px;
+    grid-column: 11/13;
+}
+
+.reserved{
+    grid-row: 2/2;
+    grid-column: 2/5;
+}
+.legal{
+    grid-row: 2/2;
+    grid-column: 10/13;
+}
